package state.model;

public interface State {
    void handle1(Context context);
    void handle2(Context context);
}
